tests/expectations/parser/functions/escape_fail.out
Error [EPAR0370050]: Could not lex the following content: `\`.

    --> test:2:5
     |
   2 |     \
     |     ^
